# arviz

./: .buildinfo  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .projections.json  .pydocstyle.ini  .pylintrc  .pytest.ini  .readthedocs.yaml  .readthedocs.yml  .travis.yml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Code_of_Conduct.MD  Diagnostics.ipynb  Extend Contributing Docs  GOVERNANCE.md  MANIFEST.in  Makefile  Plots.ipynb  README.md  SECURITY.md  Stats.ipynb  Untitled.ipynb  arvizrc.template  asv.conf.json  azure-pipelines.yml  azurepipelines-coverage.yml  codecov.yml  community.html  data.ipynb  eight_school  eight_school.d  (+25 more)
.azure-pipelines/: azure-pipelines-arviz.yml  azure-pipelines-backends.yml  azure-pipelines-base.yml  azure-pipelines-benchmark.yml  azure-pipelines-benchmarks.yml  azure-pipelines-docs.yml  azure-pipelines-external.yml  azure-pipelines-wheel.yml  azure_install_backends.sh
.azure_pipelines/: azure-pipelines-backends.yml  backend_tests.txt
.doctrees/: codeautolink-cache.json  community.doctree  external_resources.doctree  index.doctree
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
_modules/: index.html
_sources/: external_resources.md.txt
_static/: copybutton.js  custom.css  documentation_options.js  sphinx-codeautolink.css
api/: data.html  diagnostics.html  index.html  inference_data.html  plot_utils.html  plots.html  rcparams.html  stats.html  stats_refitting.html  stats_utils.html  utils.html  wrappers.html
arviz/: Untitled.ipynb  __init__.py  aot.py  inference_data.py  kde_utils.py  labels.py  numeric_utils.py  preview.py  rcparams.py  sel_utils.py  utils.py
asv_benchmarks/: asv.conf.json  hashestobenchmark.txt
asv_benckmarks/: asv.conf.json
benchmarks/: benchmarks.py
contributing/: architecture.html  content_structure.html  contributing_prs.html  developing_in_docker.html  diataxis_for_arviz.html  doc_toolchain.html  docstrings.html  how_to_add_to_example_gallery.html  how_to_release.html  index.html  issue_reports.html  issue_triaging.html  outreach.html  plotting_backends.html  pr_checklist.html  pr_tutorial.html  review_prs.html  running_benchmarks.html  sphinx_doc_build.html  syntax_guide.html  translate.html  updating_example_data.html
data/: centered_eight.nc  non_centered_eight.nc
doc/: .gitignore  Makefile  about.rst  api.rst  (+6 more)
(+1192 files in other folders)
